--- a/30-days/resources/css/app.css
+++ b/30-days/resources/css/app.css
@@ -1,16 +1,2 @@
-body {
-    font-family: 'Instrument Sans', sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-nav {
-    background-color: #f8fafc;
-    padding: 10px;
-}
-
-nav a {
-    margin-right: 10px;
-    text-decoration: none;
-    color: #333;
-}
+@import "tailwindcss";
+@source "../views";
